--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "index.js"
     },
     {
+      "src": "/",
+      "dest": "public/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "public/$1"
     }
