--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "api",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["api/**"]
+        "handler": "index.js"
       }
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "redirects": [
@@ -19,11 +23,11 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api"
     },
     {
       "source": "/auth/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api"
     },
     {
       "source": "/(.*)",
