--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "api",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": [
-          "config/**",
-          "controllers/**",
-          "middlewares/**",
-          "models/**",
-          "routes/**",
-          "services/**",
-          "utils/**",
-          "../package.json",
-          "../package-lock.json"
-        ]
+        "handler": "index.js"
       }
     },
     {
@@ -33,11 +23,11 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api"
     },
     {
       "source": "/auth/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api"
     },
     {
       "source": "/(.*)",
