--- a/vercel.json
+++ b/vercel.json
@@ -2,36 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "api",
-      "use": "@vercel/node",
-      "config": {
-        "handler": "index.js"
-      }
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
-  "redirects": [
+  "routes": [
     {
-      "source": "/",
-      "destination": "/index.html",
-      "permanent": false
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api"
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
     },
     {
-      "source": "/auth/(.*)",
-      "destination": "/api"
+      "src": "/auth/(.*)",
+      "dest": "api/index.js"
     },
     {
-      "source": "/(.*)",
-      "destination": "/public/$1"
+      "src": "/(.*)",
+      "dest": "public/$1"
     }
   ]
 }
