--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
+# Dependencias
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Variables de entorno
 .env
-.DS_Store
+.env.local
+.env.*.local
+
+# Archivos de configuración de IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Archivos de compilación
+dist/
+build/
 *.log
 
+# Archivos de sistema
+.DS_Store
+Thumbs.db
+
+# Archivos de Firebase
+firebase-debug.log*
