--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "techlab-api",
   "version": "1.0.0",
   "description": "API REST para gestión de productos con autenticación JWT y Firestore",
-  "main": "index.js",
+  "main": "api/index.js",
   "type": "module",
   "scripts": {
     "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -26,5 +27,8 @@
     "express-validator": "^7.3.1",
     "firebase": "^12.6.0",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
