--- a/vercel.json
+++ b/vercel.json
@@ -12,12 +12,14 @@
       "dest": "api/index.js"
     },
     {
-      "src": "/",
-      "dest": "public/index.html"
-    },
-    {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "/"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
