--- a/vercel.json
+++ b/vercel.json
@@ -13,13 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "public/$1"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
+      "dest": "public/index.html"
     }
   ]
 }
